tests/reference/asr-data_implied_do1-87a7869.stderr
semantic error: The end variable of the data implied do loop must be constants
 --> tests/errors/data_implied_do1.f90:5:24
  |
5 |     data(iarx(i), i=1, k) / 1, 2, 3 /
  |                        ^ 
